<!--
    COPYRIGHT LICENSE: This information contains sample code provided in source code form. You may copy, modify, and distribute
    these sample programs in any form without payment to IBM® for the purposes of developing, using, marketing or distributing
    application programs conforming to the application programming interface for the operating platform for which the sample code is written.
    Notwithstanding anything to the contrary, IBM PROVIDES THE SAMPLE SOURCE CODE ON AN "AS IS" BASIS AND IBM DISCLAIMS ALL WARRANTIES,
    EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, ANY IMPLIED WARRANTIES OR CONDITIONS OF MERCHANTABILITY, SATISFACTORY QUALITY,
    FITNESS FOR A PARTICULAR PURPOSE, TITLE, AND ANY WARRANTY OR CONDITION OF NON-INFRINGEMENT. IBM SHALL NOT BE LIABLE FOR ANY DIRECT,
    INDIRECT, INCIDENTAL, SPECIAL OR CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OR OPERATION OF THE SAMPLE SOURCE CODE.
    IBM HAS NO OBLIGATION TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS OR MODIFICATIONS TO THE SAMPLE SOURCE CODE.
-->

<resources>

    <string name="app_name">JSONStoreAndroid</string>
    <string name="greeting">Run the Android JUnit Tests. Alternatively you take a look at logcat and modify MainActivity.java</string>
    <string name="action_settings">Settings</string>


    <string name="required">Required</string>
    <string name="invalid_format">Invalid Format</string>

    <string name="user_label">User (optional)</string>
    <string name="pass_label">Pass (optional)</string>
    <string name="initialize_label">Initialize (Login/Open)</string>
    <string name="close_label">Close All (Logout)</string>
	<string name="destroy_label">Destroy Everything</string>
	<string name="remove_label">Remove Collection</string>
	<string name="name_label">Enter Name</string>
	<string name="age_label">Enter Age</string>
	<string name="add_data_label">Add Data</string>
	<string name="search_label">Search Field</string>
	<string name="limit_label">Limit (optional)</string>
	<string name="offset_label">Offset (optional)</string>
	<string name="find_by_name_label">Find By Name (Fuzzy Search)</string>
	<string name="find_by_age_label">Find By Age (Exact Search)</string>
	<string name="find_all_label">Find All</string>
	<string name="enter_id_label">Enter Id</string>
	<string name="find_by_id_label">Find (by id)</string>
	<string name="replace_by_id_label">Replace (by id)</string>
	<string name="remove_by_id_label">Remove (by id)</string>
	<string name="load_from_adapter_label">Load Data From Adapter</string>
	<string name="get_push_required_label">Get Dirty Documents</string>
	<string name="push_changes_to_adapter_label">Push Changes to Adapter</string>
	<string name="count_all_label">Count All</string>
	<string name="count_name_label">Enter Name to Count</string>
	<string name="count_by_name_label">Count By Name</string>
	<string name="old_password_label">Old Password</string>
	<string name="new_password_label">New Password</string>
	<string name="change_password_label">Change Password</string>
	<string name="get_file_info_label">Get FileInfo</string>
	<string name="console_label">console:</string>



	<string name="init_message">Collection initialized</string>
	<string name="destroy_message">Destroy finished successfully</string>
	<string name="close_message">JSONStore closed</string>
	<string name="remove_collection_message">Removed all data in the collection</string>
	<string name="add_message">Data added to the collection</string>

	<string name="remove_message">Document with id:%d removed</string>
	<string name="replace_message">Document with id:%d replaced successfully.</string>
	<string name="not_found_message">Document with id:%d NOT FOUND</string>

	<string name="count_all_message">Documents in the collection: %d</string>
	<string name="dirty_docs_message">Dirty Documents in the collection: %d</string>
	<string name="docs_found_message">Documents found: %d</string>
	<string name="update_docs_message">Documents updated: %d</string>
	<string name="add_docs_message">Documents added to collection: %d</string>
	<string name="docs_pushed_message">Documents pushed to adapter: %d</string>
	<string name="count_name_message" formatted="false">Documents in the collection with name(%s) : %d</string>
	<string name="password_change_message">Password changed successfully</string>

	<string name="file_info_message">JSONStore FileInfo:</string>

</resources>
