<!--
    COPYRIGHT LICENSE: This information contains sample code provided in source code form. You may copy, modify, and distribute
    these sample programs in any form without payment to IBM® for the purposes of developing, using, marketing or distributing
    application programs conforming to the application programming interface for the operating platform for which the sample code is written.
    Notwithstanding anything to the contrary, IBM PROVIDES THE SAMPLE SOURCE CODE ON AN "AS IS" BASIS AND IBM DISCLAIMS ALL WARRANTIES,
    EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, ANY IMPLIED WARRANTIES OR CONDITIONS OF MERCHANTABILITY, SATISFACTORY QUALITY,
    FITNESS FOR A PARTICULAR PURPOSE, TITLE, AND ANY WARRANTY OR CONDITION OF NON-INFRINGEMENT. IBM SHALL NOT BE LIABLE FOR ANY DIRECT,
    INDIRECT, INCIDENTAL, SPECIAL OR CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OR OPERATION OF THE SAMPLE SOURCE CODE.
    IBM HAS NO OBLIGATION TO PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS OR MODIFICATIONS TO THE SAMPLE SOURCE CODE.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.sample.jsonstoreandroid"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/userField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/user_label" />

                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/pass_label" />
            </LinearLayout>

            <Button
                android:id="@+id/initializeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initialize_label" />

            <Button
                android:id="@+id/closeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close_label" />

            <Button
                android:id="@+id/destroyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destroy_label" />

            <Button
                android:id="@+id/removeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remove_label" />

            <View
                style="@style/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/nameField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/name_label" />

                <EditText
                    android:id="@+id/ageField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/age_label" />
            </LinearLayout>

            <Button
                android:id="@+id/addDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_data_label" />

            <View
                style="@style/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/searchField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/limitField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/limit_label" />

                <EditText
                    android:id="@+id/offsetField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/offset_label" />
            </LinearLayout>

            <Button
                android:id="@+id/findByNameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_by_name_label" />

            <Button
                android:id="@+id/findByAgeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_by_age_label" />

            <Button
                android:id="@+id/findAllButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_all_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/findByIdField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/enter_id_label" />

                <Button
                    android:id="@+id/findByIdButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/find_by_id_label" />
            </LinearLayout>

            <View
                style="@style/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/replaceNameField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/name_label" >
                </EditText>

                <EditText
                    android:id="@+id/replaceAgeField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/age_label" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/replaceIdField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/enter_id_label" >
                </EditText>

                <Button
                    android:id="@+id/replaceByIdButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/replace_by_id_label" />
            </LinearLayout>

            <View
                style="@style/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/removeIdField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/enter_id_label" >
                </EditText>

                <Button
                    android:id="@+id/removeByIdButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remove_by_id_label" />
            </LinearLayout>

            <View
                style="@style/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/loadDataFromAdapterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_from_adapter_label" />

            <Button
                android:id="@+id/getPushRequiredButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_push_required_label" />

            <Button
                android:id="@+id/pushChangesToAdapterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_changes_to_adapter_label" />

            <View
                style="@style/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/countAllButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_all_label" />

            <EditText
                android:id="@+id/countNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/count_name_label" />

            <Button
                android:id="@+id/countByNameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count_by_name_label" />

            <View
                style="@style/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/changePasswordOldField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/old_password_label" />

                <EditText
                    android:id="@+id/changePasswordNewField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/new_password_label" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/changePasswordUserField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/user_label" />

                <Button
                    android:id="@+id/changePasswordButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_password_label" />
            </LinearLayout>

            <View
                style="@style/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp" />


            <Button
                android:id="@+id/getFileInfoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_file_info_label" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/consoleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/consoleTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:typeface="monospace" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>